[gd_scene load_steps=9 format=2]

[ext_resource path="res://resource/img/sentidos_logo.png" type="Texture" id=1]
[ext_resource path="res://resource/fonts/CrimsonText-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Login.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.811765, 0.435294, 0.807843, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.482353, 0.0705882, 0.670588, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.482353, 0.0705882, 0.670588, 1 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.482353, 0.0705882, 0.670588, 1 )

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_bottom = 1.0
rect_min_size = Vector2( 400, 0 )
custom_styles/panel = SubResource( 1 )

[node name="LineEdit" type="LineEdit" parent="Panel"]
margin_left = 56.0
margin_top = 280.0
margin_right = 344.0
margin_bottom = 304.0
custom_colors/cursor_color = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/normal = SubResource( 4 )
max_length = 20
placeholder_text = "Ingrese su suarios"

[node name="LineEdit2" type="LineEdit" parent="Panel"]
margin_left = 56.0
margin_top = 374.0
margin_right = 344.0
margin_bottom = 398.0
custom_styles/normal = SubResource( 5 )
max_length = 20
secret = true
placeholder_text = "Ingrese su contraseña"

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.067
anchor_right = 0.5
anchor_bottom = 0.067
margin_left = -144.0
margin_top = 108.8
margin_right = 139.0
margin_bottom = 148.8
custom_fonts/font = SubResource( 2 )
text = "Autenticacion de usuario"

[node name="HTTPRequest" type="HTTPRequest" parent="Panel"]

[node name="Button" type="Button" parent="Panel"]
margin_left = 136.0
margin_top = 436.0
margin_right = 259.0
margin_bottom = 482.0
text = "Aceptar"

[node name="getUserData" type="HTTPRequest" parent="Panel"]

[node name="Panel2" type="Panel" parent="."]
margin_left = 400.0
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 3 )

[node name="Label2" type="Label" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.067
anchor_right = 0.5
anchor_bottom = 0.067
margin_left = -112.0
margin_top = 7.8
margin_right = 171.0
margin_bottom = 64.8
custom_fonts/font = SubResource( 2 )
text = "                 Sentidos
restaurante y casa de té"

[node name="Label3" type="Label" parent="Panel2"]
anchor_left = 0.5
anchor_top = 0.067
anchor_right = 0.5
anchor_bottom = 0.067
margin_left = 160.0
margin_top = 527.8
margin_right = 443.0
margin_bottom = 584.8
custom_fonts/font = SubResource( 2 )
text = "versión 1.0.0
"

[node name="SentidosLogo" type="Sprite" parent="Panel2"]
position = Vector2( 320, 328 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[connection signal="request_completed" from="Panel/HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="Panel/getUserData" to="." method="_on_getUserData_request_completed"]
